@@ -4,8 +4,8 @@ Author: Dirk Eddelbuettel <edd@debian.org> with contributions
  Mario Frasca, Bryan Lewis, Murray Stokely, Hannes Muehleisen,
  Duncan Murdoch, Jim Hester, Wush Wu, Qiang Kou, Thierry Onkelinx, 
  Michel Lang, Viliam Simko, Kurt Hornik, Radford Neal, and Kendon Bell.
-Version: 0.6.19
-Date: 2019-05-19
+Version: 0.6.19.1
+Date: 2019-05-26
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Title: Create Compact Hash Digests of R Objects
 Description: Implementation of a function 'digest()' for the creation 
@@ -20,5 +20,5 @@ URL: http://dirk.eddelbuettel.com/code/digest.html
 BugReports: https://github.com/eddelbuettel/digest/issues
 Depends: R (>= 3.1.0)
 License: GPL (>= 2)
-Suggests: knitr, rmarkdown
+Suggests: tinytest, knitr, rmarkdown
 VignetteBuilder: knitr
